--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Acesso unificado para os sistemas da Satc">
     <meta name="author" content="Mateus Marcelino" />
@@ -14,8 +17,8 @@
     <meta property="og:site_name" content="ACESSOUNIFICADO" />
     <title>Satc - Acesso Unificado</title>
   </head>
-  <body>
-    <div id="root"></div>
+  <body id="kt-body" class="app-blank">
+    <div class="h-100" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
