--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="ACESSOUNIFICADO" />
     <title>Satc - Acesso Unificado</title>
   </head>
-  <body id="kt-body" class="app-blank">
+  <body id="kt-body" class="app-blank" data-theme="dark" >
     <div class="h-100" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
