--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.png" />
@@ -17,7 +17,7 @@
     <meta property="og:site_name" content="ACESSOUNIFICADO" />
     <title>Satc - Acesso Unificado</title>
   </head>
-  <body id="kt-body" class="app-blank" data-theme="dark" >
+  <body id="kt-body" class="app-default" data-theme="dark" >
     <div class="h-100" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
