--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.png" />
+    <link rel="icon" type="image/svg+xml" href="./favicon.png" />
     <link href="https://fonts.googleapis.com/css2?family=Inter" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700" rel="stylesheet">
@@ -13,12 +13,12 @@
     <meta property="og:locale" content="pt_BR" />
     <meta property="og:title" content="Satc - Acesso Unificado" />
     <meta property="og:description" content="Acesso unificado para os sistemas da Satc" />
-    <!-- <meta property="og:url" content="https://jovemaprendiz.satc.edu.br/" /> -->
+    <meta property="og:url" content="https://app.satc.edu.br/acesso-unificado/" />
     <meta property="og:site_name" content="ACESSOUNIFICADO" />
     <title>Satc - Acesso Unificado</title>
   </head>
   <body id="kt-body" class="app-blank" data-theme="dark" data-kt-app-header-stacked="true">
     <div class="h-100" id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
