--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Corinthia:wght@400;700" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Acesso unificado para os sistemas da Satc">
-    <meta name="author" content="Mateus Marcelino" />
+    <meta name="author" content="Mateus Marcelino, João Carlos Braga Rodrigues, Thiago Zimmermann" />
     <meta name="keywords" content="acesso, unificado, satc, unisatc">
     <meta property="og:locale" content="pt_BR" />
-    <meta property="og:title" content="Satc - Acesso Unificado" />
+    <meta property="og:title" content="SATC - Acesso Unificado" />
     <meta property="og:description" content="Acesso unificado para os sistemas da Satc" />
     <meta property="og:url" content="https://app.satc.edu.br/acesso-unificado/" />
     <meta property="og:site_name" content="ACESSOUNIFICADO" />
-    <title>Satc - Acesso Unificado</title>
+    <title>SATC - Acesso Unificado</title>
   </head>
   <body id="kt-body" class="app-blank" data-theme="dark" data-kt-app-header-stacked="true">
     <div class="h-100" id="root"></div>
