--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
     <meta property="og:url" content="https://app.satc.edu.br/acesso-unificado/" />
     <meta property="og:site_name" content="ACESSOUNIFICADO" />
     <title>SATC - Acesso Unificado</title>
+    <script type="module" src="./src/assets/scripts.bundle.js"></script>
   </head>
   <body id="kt-body" class="app-blank" data-theme="dark" data-kt-app-header-stacked="true">
     <div class="h-100" id="root"></div>
     <script type="module" src="./src/main.tsx"></script>
+
   </body>
 </html>
